--- a/packages/tradie-scripts-webpack/package.json
+++ b/packages/tradie-scripts-webpack/package.json
@@ -2,7 +2,9 @@
   "name": "tradie-scripts-webpack",
   "version": "2.0.0",
   "description": "Scripts for building, serving and testing using Webpack and Jest.",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "chalk": "^1.1.3",
     "connect": "^3.5.0",
@@ -14,12 +16,9 @@
     "promised-del": "^1.0.2",
     "server-destroy": "^1.0.1",
     "wait-for-event": "^1.0.0",
-    "webpack": "^3.0.0",
+    "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1"
-  },
-  "peerDependencies": {
-    "webpack": "^2.2.0"
   },
   "scripts": {
     "clean": "tradie clean",
