--- a/packages/tradie-webpack-utils/package.json
+++ b/packages/tradie-webpack-utils/package.json
@@ -5,6 +5,7 @@
     "webpack": "^2.2.0"
   },
   "dependencies": {
-    "lodash.difference": "^4.5.0"
+    "lodash.difference": "^4.5.0",
+    "webpack": "2"
   }
 }
