--- a/packages/tradie-template-node-package/package.json
+++ b/packages/tradie-template-node-package/package.json
@@ -3,13 +3,15 @@
   "version": "2.0.0",
   "repository": "jameslnewell/tradie-v4",
   "files": [
-    "lib"
+    "lib",
+    "tpl"
   ],
   "tradie-template": "tradie-template-node-package",
   "dependencies": {
     "babel-plugin-dynamic-import-node": "^1.0.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-flow": "^6.23.0",
     "eslint-config-jameslnewell": "^3.0.2",
