--- a/packages/tradie-utils-flow/package.json
+++ b/packages/tradie-utils-flow/package.json
@@ -9,9 +9,12 @@
     "chalk": "^1.1.3",
     "flow-bin": "^0.48.0",
     "fs-extra": "^3.0.1",
-    "sprintf-js": "^1.1.1"
+    "sprintf-js": "^1.1.1",
+    "shell-escape": "^0.2.0"
   },
-  "tradie-template": "tradie-template-node-package",
+  "devDependencies": {
+    "strip-ansi": "^4.0.0"
+  },
   "scripts": {
     "lint": "tradie lint",
     "clean": "tradie clean",
@@ -19,7 +22,5 @@
     "watch": "tradie build --watch",
     "test": "tradie test"
   },
-  "devDependencies": {
-    "strip-ansi": "^4.0.0"
-  }
+  "tradie-template": "tradie-template-node-package"
 }
