--- a/packages/tradie-utils-eslint/package.json
+++ b/packages/tradie-utils-eslint/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "eslint": "^4.0.0",
-    "text-table": "^0.2.0"
+    "fs-extra": "^3.0.1",
+    "text-table": "^0.2.0",
+    "tradie-utils-group-exec": "^2.0.0"
   },
   "tradie-template": "tradie-template-node-package",
   "scripts": {
