--- a/packages/utils/babel/package.json
+++ b/packages/utils/babel/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@tradie/babel-utils",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "main": "lib/index.js",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "babel-core": "^6.24.1",
     "chalk": "^2.4.1",
