--- a/packages/utils/processor/package.json
+++ b/packages/utils/processor/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@tradie/processor-utils",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "@jameslnewell/cancelable-promise": "^1.0.2",
     "@tradie/file-utils": "^2.0.0",
