--- a/packages/scripts/node/package.json
+++ b/packages/scripts/node/package.json
@@ -3,10 +3,7 @@
   "description": "An opinionated set of scripts for creating and maintaining node packages.",
   "version": "1.1.1",
   "repository": "jameslnewell/tradie-v4",
-  "files": [
-    "lib",
-    "tpl"
-  ],
+  "files": ["lib", "tpl"],
   "bin": {
     "node-scripts": "lib/index.js"
   },
@@ -14,13 +11,11 @@
     "@tradie/cli": "^2.0.0",
     "@tradie/file-utils": "^2.0.1",
     "@tradie/generator-utils": "^1.2.1",
-    "@tradie/jest-utils": "^2.0.0",
+    "@tradie/jest-utils": "^3.0.0",
     "@tradie/processor-utils": "^3.1.1",
     "@tradie/reporter-utils": "^2.1.0",
     "@tradie/tslint-utils": "^1.0.0",
     "@tradie/typescript-utils": "^1.0.1",
-    "jest": "^22.4.2",
-    "ts-jest": "^22.4.0",
     "ts-node": "^5.0.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.9.0",
