--- a/packages/utils/cli/package.json
+++ b/packages/utils/cli/package.json
@@ -3,14 +3,12 @@
   "version": "1.2.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib"],
   "dependencies": {
     "@types/node": "^9.4.6"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.0"
+    "@types/jest": "^23.1.0"
   },
   "scripts": {
     "clean": "node-scripts clean",
