--- a/packages/utils/file/package.json
+++ b/packages/utils/file/package.json
@@ -3,9 +3,7 @@
   "version": "2.0.1",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib"],
   "dependencies": {
     "@jameslnewell/cancelable-promise": "^1.0.2",
     "@types/anymatch": "^1.3.0",
@@ -19,6 +17,9 @@
     "finder-on-steroids": "^1.0.3",
     "fs-extra": "^6.0.1"
   },
+  "devDependencies": {
+    "@types/jest": "^23.1.0"
+  },
   "scripts": {
     "lint": "node-scripts lint",
     "clean": "node-scripts clean",
@@ -26,8 +27,5 @@
     "watch": "node-scripts build --watch",
     "test": "node-scripts test"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "@types/jest": "^22.2.0"
-  }
+  "license": "MIT"
 }
