--- a/packages/utils/jest/package.json
+++ b/packages/utils/jest/package.json
@@ -1,15 +1,13 @@
 {
   "name": "@tradie/jest-utils",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib"],
   "dependencies": {
     "@types/babel-core": "^6.25.3",
     "babel-core": "^6.26.0",
-    "jest-cli": "^22.4.2",
+    "jest-cli": "^23.1.0",
     "typescript": "^2.7.2"
   },
   "scripts": {
